microk8s/infrastructure/installation/traefik/traefik-dashboard-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-auth
  namespace: kube-system
spec:
  basicAuth:
    realm: 'Traefik Dashboard'
    secret: dashboard-auth-secret-5
