microk8s/infrastructure/installation/traefik/kubernetes-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kubernetes.manhlam.name.vn`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          port: 443
